<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgPicture"
        android:layout_width="match_parent"
        android:layout_height="550dp"

        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgPicture"
        android:padding="16dp"
        android:onClick="btnTakePhotoClicked"
        android:text="@string/take_photo_and_save"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btn1"
        android:layout_below="@id/imgPicture"
        android:padding="16dp"
        android:onClick="btnOpenGalleryClicked"
        android:text="@string/open_image_from_the_gallery"
        android:textAllCaps="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn1"
        android:padding="16dp"
        android:onClick="btnRotate"
        android:text="@string/rotate_the_image"
        android:textAllCaps="true"/>

    <!--<Button-->
        <!--android:id="@+id/btn2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/img"-->
        <!--android:layout_toRightOf="@id/btn1"-->
        <!--android:text="Save"-->
        <!--android:textAllCaps="true"/>-->

</RelativeLayout>